<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lumen</string>

    <string name="hint_url">Search or type URL</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stop">Stop</string>
    <string name="action_home">Home</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_close_tab">Close tab</string>
    <string name="action_tabs">Tabs</string>
    <string name="action_bookmark">Bookmark this page</string>
    <string name="action_unbookmark">Remove bookmark</string>
    <string name="action_share">Share</string>
    <string name="action_find">Find in page</string>
    <string name="action_desktop">Request desktop site</string>
    <string name="action_javascript">JavaScript</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_clear_data">Clear browsing data</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_open_external">Open in external browser</string>

    <string name="tab_new">New tab</string>
    <string name="find_hint">Find</string>
    <string name="empty_bookmarks">No bookmarks yet</string>
    <string name="empty_history">No history yet</string>
    <string name="empty_tabs">No tabs</string>
    <string name="confirm_clear">Clear all browsing data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="downloads_empty">No downloads yet</string>
    <string name="download_started">Download started</string>
    <string name="permission_denied">Permission denied</string>

    <string name="settings_start_page">Start page</string>
    <string name="settings_start_page_summary">URL opened on a new tab</string>
    <string name="settings_block_ads">Block ads</string>
    <string name="settings_block_trackers">Block trackers</string>
    <string name="settings_block_webrtc">Disable WebRTC (prevent IP leak)</string>
    <string name="settings_protection_stats">Protection stats</string>
    <string name="settings_ads_blocked">Ads blocked</string>
    <string name="settings_trackers_blocked">Trackers blocked</string>
    <string name="settings_load_images">Load images</string>
    <string name="settings_save_history">Save history</string>
    <string name="settings_dark_mode">Force dark mode</string>

    <string name="section_display">Display</string>
    <string name="section_privacy">Privacy &amp; data</string>
    <string name="section_library">Library</string>
    <string name="section_page">This page</string>
    <string name="row_open_external">Open in external browser</string>
    <string name="row_exit">Exit browser</string>
    <string name="widget_search_label">Lumen Search</string>
    <string name="section_addons">Add-ons (Firefox extensions)</string>
    <string name="action_install">Install .xpi</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="addons_empty">No add-ons installed. Install a .xpi file to get started.</string>
    <string name="install_failed">Installation failed. Is this a valid .xpi file?</string>
    <string name="install_success">Add-on installed</string>
</resources>
